# prepoly

./: .gitignore  Cargo.toml  LICENSE  README.md  run_examples.sh  x
.github/workflows/: book.yaml  release.yaml
book/: astro.config.mjs  book.toml  package.json
book/playground/: .gitignore  index.html  introduction.html  package.json  pnpm-lock.yaml  vite.config.ts
book/src/: SUMMARY.md  chapter_1.md  chapter_2.md  hello.md  interpreter.md  introduction.md  llm.md  modules.md  null-result.md  playground.md  reflection.md  types.md
bootstrap/: Cargo.toml
bootstrap/src/: http.rs  llvm.rs  main.rs
core/: collections.cz  show.cz
crates/brass_cache/: Cargo.toml
crates/brass_cache/src/: lib.rs
crates/brass_driver/: Cargo.toml  build.rs
crates/brass_driver/src/: main.rs
crates/brass_driver/tests/: book_examples.rs  e2e.rs  modules.rs  package_manager.rs  plugin_e2e.rs  program_args.rs  repl_e2e.rs  run_examples.rs
crates/brass_engine/: Cargo.toml
crates/brass_engine/src/: codegen.rs  engine.rs  lib.rs  mir_infer.rs  render.rs  runtime.rs
crates/brass_engine/src/mono/: boundary.rs  closure.rs  fold.rs  mod.rs  rules.rs  scan.rs  symbols.rs
crates/brass_engine/tests/: dispatch.rs  view_collapse.rs
crates/brass_formatter/: Cargo.toml
crates/brass_jit_llvm/: Cargo.toml
crates/brass_jit_llvm/src/: closure.rs  codegen.rs  dispatch.rs  layout.rs  lib.rs  monomorph.rs  ownership.rs
crates/brass_jit_llvm/src/jit/: engine.rs  mod.rs
crates/brass_jit_llvm/tests/: mir_jit.rs  runtime_jit.rs
crates/brass_package_manager/: Cargo.toml  build.rs
crates/brass_package_manager/src/: main.rs  manifest.rs
crates/brass_plugin/: Cargo.toml
crates/brass_plugin/src/: lib.rs  raw.rs  registry.rs  value.rs
crates/brass_plugin_altlib/: Cargo.toml
crates/brass_plugin_altlib/src/: lib.rs
crates/brass_plugin_faultylib/: Cargo.toml
crates/brass_plugin_faultylib/src/: lib.rs
crates/brass_plugin_host/: Cargo.toml
crates/brass_plugin_host/src/: lib.rs
crates/brass_plugin_host/tests/: load_and_call.rs
crates/brass_plugin_testlib/: Cargo.toml
crates/brass_plugin_testlib/src/: lib.rs
crates/brass_repl/: Cargo.toml
crates/brass_repl/src/: format.rs  interp.rs  lib.rs  value.rs
crates/brass_resolve/: Cargo.toml  build.rs
crates/brass_resolve/src/: frontend.rs  lib.rs  loader.rs  module.rs  plugin.rs  qualified.rs  visibility.rs
crates/brass_resolve/tests/: plugin_module.rs
crates/brass_runtime/: Cargo.toml
crates/brass_runtime/src/: alloc.rs  builtins.rs  conc.rs  gc.rs  io.rs  lib.rs  mem.rs  plugin.rs  region.rs  rt.rs
crates/brass_typeck/: Cargo.toml
crates/brass_typeck/src/: constck.rs  constraint.rs  definite.rs  exhaustive.rs  flow.rs  globals.rs  hm.rs  interface.rs  lib.rs  narrow.rs  stream.rs  structural.rs  walk.rs
crates/brass_typeck/src/infer/: assign.rs  builtins.rs  call.rs  expr.rs  helpers.rs  instantiate.rs  light.rs  literals.rs  lookup.rs  mod.rs  patterns.rs  precompute.rs  resolve.rs
crates/brass_typeck/tests/: type_test_if.rs
crates/prepoly_cache/: Cargo.toml
crates/prepoly_cache/src/: lib.rs
crates/prepoly_driver/: Cargo.toml  build.rs
crates/prepoly_driver/src/: main.rs
crates/prepoly_driver/tests/: e2e.rs  modules.rs  plugin_e2e.rs  program_args.rs  repl_e2e.rs  run_examples.rs
crates/prepoly_engine/: Cargo.toml
crates/prepoly_engine/src/: codegen.rs  engine.rs  lib.rs  mir_infer.rs  mono.rs  runtime.rs
crates/prepoly_engine/src/mono/: boundary.rs  closure.rs  fold.rs  mod.rs  rules.rs  scan.rs  symbols.rs
crates/prepoly_engine/tests/: dispatch.rs  view_collapse.rs
crates/prepoly_jit_llvm/: Cargo.toml
crates/prepoly_jit_llvm/src/: closure.rs  codegen.rs  dispatch.rs  layout.rs  lib.rs  monomorph.rs  ownership.rs
crates/prepoly_jit_llvm/src/jit/: engine.rs  mod.rs
crates/prepoly_jit_llvm/tests/: mir_jit.rs  runtime_jit.rs
crates/prepoly_language_server/: Cargo.toml
crates/prepoly_language_server/src/: backend.rs  document.rs  main.rs  render.rs  tests.rs
crates/prepoly_language_server/src/analysis/: items.rs  mod.rs  world.rs
crates/prepoly_language_server/src/features/: completion.rs  definition.rs  diagnostics.rs  hover.rs  mod.rs  nav.rs  semantic_tokens.rs  signature.rs
crates/prepoly_language_server/tests/: lsp_e2e.rs
crates/prepoly_package_manager/: Cargo.toml  build.rs
crates/prepoly_package_manager/src/: main.rs  manifest.rs
crates/prepoly_plugin_altlib/: Cargo.toml
crates/prepoly_plugin_altlib/src/: lib.rs
crates/prepoly_plugin_faultylib/: Cargo.toml
crates/prepoly_plugin_faultylib/src/: lib.rs
crates/prepoly_typeck/: Cargo.toml
crates/prepoly_typeck/src/: constck.rs  constraint.rs  definite.rs  exhaustive.rs  flow.rs  globals.rs  hm.rs  infer.rs  interface.rs  lib.rs  narrow.rs  structural.rs  walk.rs
crates/prepoly_typeck/src/infer/: assign.rs  builtins.rs  call.rs  expr.rs  helpers.rs  instantiate.rs  light.rs  literals.rs  lookup.rs  mod.rs  patterns.rs  precompute.rs  resolve.rs
examples/: 01_records.pp  02_sum_types.pp  03_interfaces.cz  03_interfaces.pp  04_sum_interface.pp  05_nullable_and_result.pp  06_structural_subtyping.pp  07_closures.pp  08_pattern_matching.cz  09_collections.pp  10_strings_and_conversions.cz  10_strings_and_conversions.pp  11_control_flow.cz  12_concurrency.pp  13_file_io.cz  13_file_io.pp  14_type_safety.pp  15_numeric_conversions.cz  15_numeric_conversions.pp  16_method_inference.pp  17_higher_order.cz  17_higher_order.pp  18_methods.cz  18_ufcs.pp
libraries/: build.sh  env.cz  fs.cz  fs.pp  hash.cz  hash.pp  http.cz  http.pp  net.cz  net.pp  path.cz  path.pp  process.cz  process.pp  regex.cz  semver.cz  url.cz
libraries/env/: Cargo.toml
libraries/env/src/: lib.rs
libraries/fs/: Cargo.toml
libraries/fs/src/: lib.rs
libraries/hash/: Cargo.toml
libraries/hash/src/: lib.rs
libraries/net/: Cargo.toml
libraries/net/src/: lib.rs
libraries/path/: Cargo.toml
libraries/path/src/: lib.rs
scripts/: install.sh  pack.sh
std/: array.pp  assert.pp  collections.cz  conv.pp  io.pp  math.pp  string.pp
(+875 files in other folders)
