[workspace]
resolver = "2"
members = [
    "crates/prepoly_lexer",
    "crates/prepoly_parser",
    "crates/prepoly_hir",
    "crates/prepoly_mir",
    "crates/prepoly_solver",
    "crates/prepoly_resolve",
    "crates/prepoly_typeck",
    "crates/prepoly_runtime",
    "crates/prepoly_jit_llvm",
    "crates/prepoly_engine",
    "crates/prepoly_repl",
    "crates/prepoly_driver",
    "bootstrap", "crates/prepoly_language_server",
]
# The default set is the cross-platform crates -- those that build for every
# target including wasm. The native-only crates are left out so a plain
# `cargo build`/`cargo test` (and `cargo build --target wasm32-*`) operates on the
# portable set without dragging in LLVM or host-only runtime code:
#   - `prepoly_jit_llvm` / `prepoly_runtime`: the LLVM JIT and its C-ABI runtime
#     (LLVM cannot link for wasm; the runtime uses raw fds/threads). On native they
#     are still built and tested as dependencies of `prepoly_driver` (the `jit`
#     feature) -- and reachable with `-p` or `--workspace`.
#   - `bootstrap`: the LLVM-downloader / `./x` runner (tokio + reqwest); `./x`
#     builds it explicitly with `-p bootstrap`.
# All three remain workspace members.
default-members = [
    "crates/prepoly_lexer",
    "crates/prepoly_parser",
    "crates/prepoly_hir",
    "crates/prepoly_mir",
    "crates/prepoly_solver",
    "crates/prepoly_resolve",
    "crates/prepoly_typeck",
    "crates/prepoly_engine",
    "crates/prepoly_repl",
    "crates/prepoly_driver",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Yuki Okamoto <cord@x56.cx>"]

[workspace.dependencies]
prepoly_lexer = { path = "crates/prepoly_lexer" }
prepoly_parser = { path = "crates/prepoly_parser" }
prepoly_hir = { path = "crates/prepoly_hir" }
prepoly_mir = { path = "crates/prepoly_mir" }
prepoly_solver = { path = "crates/prepoly_solver" }
prepoly_resolve = { path = "crates/prepoly_resolve" }
prepoly_typeck = { path = "crates/prepoly_typeck" }
prepoly_runtime = { path = "crates/prepoly_runtime" }
prepoly_jit_llvm = { path = "crates/prepoly_jit_llvm" }
prepoly_engine = { path = "crates/prepoly_engine" }
prepoly_repl = { path = "crates/prepoly_repl" }

# LLVM bindings. Native builds link the local LLVM 22.1.0 statically.
inkwell = { version = "0.9", features = ["llvm22-1"] }
llvm-sys = { version = "221", features = ["prefer-static"] }

tracing = "0.1"
# `env-filter` parses the `PREPOLY_LOG` directive the driver feeds it; the rest of
# the default features (`fmt`, `ansi`) give the stderr formatter.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
