[workspace]
resolver = "2"
members = [
    "crates/prepoly_utils",
    "crates/prepoly_typesys",
    "crates/prepoly_parser",
    "crates/prepoly_hir",
    "crates/prepoly_mir",
    "crates/prepoly_solver",
    "crates/prepoly_resolve",
    "crates/prepoly_typeck",
    "crates/prepoly_runtime",
    "crates/prepoly_jit_llvm",
    "crates/prepoly_engine",
    "crates/prepoly_repl",
    "crates/prepoly_driver",
    "bootstrap",
    "crates/prepoly_language_server",
    "crates/prepoly_formatter",
    "crates/prepoly_package_manager",
    "crates/prepoly_plugin",
    "crates/prepoly_plugin_host",
    "crates/prepoly_plugin_testlib",
    "crates/prepoly_plugin_faultylib",
    "crates/prepoly_plugin_altlib",
    "libraries/process",
    "libraries/path",
]
# The default set includes the command-line driver. On native targets the driver
# enables its `jit` feature by default, so a plain `cargo build` may need LLVM;
# use `./x cargo ...` for that path, or build `prepoly_driver` with
# `--no-default-features` for the interpreter-only driver. Wasm builds do not pull
# LLVM because the driver disables the JIT backend for wasm targets. `bootstrap`
# remains outside the default set because it is only the LLVM-downloader / `./x`
# runner and is built explicitly with `-p bootstrap`.
default-members = [
    "crates/prepoly_utils",
    "crates/prepoly_typesys",
    "crates/prepoly_parser",
    "crates/prepoly_hir",
    "crates/prepoly_mir",
    "crates/prepoly_solver",
    "crates/prepoly_resolve",
    "crates/prepoly_typeck",
    "crates/prepoly_engine",
    "crates/prepoly_repl",
    "crates/prepoly_driver",
    "crates/prepoly_plugin",
    "crates/prepoly_plugin_host",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
authors = ["Yuki Okamoto <cord@x56.cx>"]

[workspace.dependencies]
prepoly_utils = { path = "crates/prepoly_utils" }
prepoly_typesys = { path = "crates/prepoly_typesys" }
prepoly_parser = { path = "crates/prepoly_parser" }
prepoly_hir = { path = "crates/prepoly_hir" }
prepoly_mir = { path = "crates/prepoly_mir" }
prepoly_solver = { path = "crates/prepoly_solver" }
prepoly_resolve = { path = "crates/prepoly_resolve" }
prepoly_typeck = { path = "crates/prepoly_typeck" }
prepoly_runtime = { path = "crates/prepoly_runtime" }
prepoly_jit_llvm = { path = "crates/prepoly_jit_llvm" }
prepoly_engine = { path = "crates/prepoly_engine" }
prepoly_repl = { path = "crates/prepoly_repl" }
prepoly_formatter = { path = "crates/prepoly_formatter" }
prepoly_plugin = { path = "crates/prepoly_plugin" }
prepoly_plugin_host = { path = "crates/prepoly_plugin_host" }

# LLVM bindings. Native builds link the local LLVM 22.1.0 statically.
inkwell = { version = "0.9", features = ["llvm22-1"] }
llvm-sys = { version = "221", features = ["prefer-static"] }

tracing = "0.1"
# `env-filter` parses the `PREPOLY_LOG` directive the driver feeds it; the rest of
# the default features (`fmt`, `ansi`) give the stderr formatter.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = true

[profile.wasm]
inherits = "release"
opt-level = "z"
