[package]
name = "bootstrap"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tar = "0.4"
xz = "0.1"
sha2 = "0.11"
reqwest = "0.13"
anyhow = "1"
indicatif = "0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
