[package]
name = "brass_cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
brass_parser.workspace = true
brass_hir.workspace = true
brass_resolve.workspace = true
brass_typeck.workspace = true
brass_metadata.workspace = true
tracing.workspace = true
serde.workspace = true

postcard = { version = "1", features = ["use-std"] }

# Source files are identified by content, not modification time, so that a cache
# survives being copied (see `FileStamp`). SHA-1 is the same implementation the
# `hash` library plugin uses.
sha1 = "0.11"
