[package]
name = "brass_driver"
version.workspace = true
edition.workspace = true

[[bin]]
name = "brass"
path = "src/main.rs"

[dependencies]
brass_parser.workspace = true
brass_hir.workspace = true
brass_resolve.workspace = true
brass_typeck.workspace = true
brass_typesys.workspace = true
brass_repl.workspace = true

clap = { version = "4", features = ["derive"] }
brass_utils.workspace = true
brass_cache.workspace = true
brass_metadata.workspace = true
tracing.workspace = true

# The LLVM JIT back end is native-only -- LLVM cannot link for wasm -- so its
# optional dependencies are declared only for non-wasm targets. The default `jit`
# feature activates them there; on a wasm target the deps are absent, so `jit` is
# automatically inert and the driver falls back to the REPL interpreter
# (`brass_repl`, no LLVM). `build.rs` mirrors this as the `jit_backend` cfg the
# code selects on. Without the feature, the JIT is also skipped on native.
[target.'cfg(not(target_family = "wasm"))'.dependencies]
brass_jit_llvm = { workspace = true, optional = true }
inkwell = { workspace = true, optional = true }
# The demand-driven half of the lazy pipeline: the driver lowers MIR bodies
# as their checks stream in and monomorphizes from the entry roots itself.
brass_mir = { workspace = true, optional = true }
brass_engine = { workspace = true, optional = true }
# The lazy-check pipeline (type inference on a checker thread alongside JIT
# execution) is part of the JIT back end, so its runtime rides the same
# native-only optional-dependency pattern: a wasm build -- which cannot spawn
# threads -- never compiles any of the threading code and always checks
# eagerly, the same way the language server confines its threaded runtime to
# native targets.
tokio = { version = "1", features = ["rt", "sync"], optional = true }

[features]
default = ["jit"]
jit = [
    "dep:brass_jit_llvm",
    "dep:inkwell",
    "dep:tokio",
    "dep:brass_mir",
    "dep:brass_engine",
]

# The plugin e2e test builds and loads the in-repo fixture plugin.
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
brass_plugin_host = { workspace = true, features = ["fixture"] }
