[package]
name = "brass_jit_llvm"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tracing.workspace = true
brass_parser.workspace = true
brass_hir.workspace = true
brass_mir.workspace = true
brass_engine.workspace = true
brass_runtime.workspace = true
inkwell.workspace = true
# Not referenced in code: pins the `prefer-static` feature on the llvm-sys
# build that inkwell links against.
llvm-sys.workspace = true
