[package]
name = "brass_package_manager"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "czm"
path = "src/main.rs"

[dependencies]
brass_metadata.workspace = true

clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
