# A second fixture plugin, standing in for a rebuilt `brass_plugin_testlib`:
# it keeps `add` and adds `extra`, so a host that revalidates its cache is
# distinguishable from one that serves the stale manifest.
[package]
name = "brass_plugin_altlib"
description = "Fixture Brass plugin standing in for a rebuilt testlib"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
brass_plugin = { workspace = true }
