[package]
name = "brass_repl"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
brass_parser.workspace = true
brass_hir.workspace = true
brass_mir.workspace = true
brass_engine.workspace = true
# The driver-published program argument vector the `_argv` builtin answers with.
brass_utils.workspace = true
# Native-plugin dispatch; self-stubbing on wasm, where the interpreter
# reports plugin calls as unsupported.
brass_plugin_host.workspace = true
