[package]
name = "brass_resolve"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
brass_parser.workspace = true
brass_hir.workspace = true
brass_plugin_host.workspace = true

[dev-dependencies]
brass_plugin_host = { workspace = true, features = ["fixture"] }
