[package]
name = "prepoly_engine"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prepoly_parser.workspace = true
prepoly_hir.workspace = true
prepoly_typesys.workspace = true
prepoly_mir.workspace = true
prepoly_solver.workspace = true
tracing.workspace = true
prepoly_utils.workspace = true

[dev-dependencies]
prepoly_typeck.workspace = true
