[package]
name = "prepoly_jit_llvm"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
prepoly_lexer.workspace = true
prepoly_parser.workspace = true
prepoly_hir.workspace = true
prepoly_mir.workspace = true
prepoly_engine.workspace = true
prepoly_runtime.workspace = true
inkwell.workspace = true
llvm-sys.workspace = true
