[package]
name = "prepoly_language_server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "prepoly-lsp"
path = "src/main.rs"

[dependencies]
prepoly_lexer.workspace = true
prepoly_parser.workspace = true
prepoly_hir.workspace = true
prepoly_resolve.workspace = true
prepoly_typeck.workspace = true

# LSP server framework (Tower-based). The default `runtime-tokio` feature pulls
# in the tokio integration the async `LanguageServer` impl runs on.
tower-lsp-server = "0.23"
# Async runtime for the stdio JSON-RPC server loop. `io-std` gives async
# stdin/stdout; `macros`/`rt-multi-thread` give `#[tokio::main]`.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
# Concurrent document store keyed by URI; one entry per open file.
dashmap = "6"

tracing.workspace = true
tracing-subscriber.workspace = true
