# Fixture plugin whose registration panics. Used to pin that a faulty plugin
# reports a load error instead of aborting the compiler or the language server.
[package]
name = "prepoly_plugin_faultylib"
description = "Fixture Prepoly plugin that panics while registering"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
prepoly_plugin = { workspace = true }
