# The fs library's native half: a brass plugin (cdylib) loaded by
# `libraries/fs.cz`. Build and install it with `libraries/build.sh`.
[package]
name = "brass_lib_fs"
description = "brass plugin: file descriptors and byte I/O"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# The cdylib is installed as `libraries/libfs.so`, and the wrapper
# module imports it by that file name (`import libfs.{ .. }`).
name = "fs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
brass_plugin = { workspace = true }
