# The net library's native half: a Brass plugin (cdylib) loaded by
# `libraries/net.cz`. Build and install it with `libraries/build.sh`.
[package]
name = "brass_lib_net"
description = "Brass plugin: TCP/UDP sockets and TLS client connections"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
# The cdylib is installed as `libraries/libnet.so`, and the wrapper
# module imports it by that file name (`import libnet.{ .. }`).
name = "net"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
brass_plugin = { workspace = true }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
    "tls12",
] }
webpki-roots = "1.0"
